fix icon hover state, subsection border, hide nav title better on mobile

--- a/newamericadotorg/assets/react/report/components/ContentMenu.scss
+++ b/newamericadotorg/assets/react/report/components/ContentMenu.scss
@@ -1,6 +1,6 @@
 .report__menu__subsection{
   background: #DEDEDE;
-  border-top: 1px solid color(gray);
+  border-top: 1px solid #BABABA;
   a {
     box-shadow: inset 0px 0 0 0 color(black);
     @include transition(box-shadow 0.15s ease);
